Changelog 
=========

1.0 - unreleased
----------------


1.0b2 - April 21, 2008
----------------------

- Resize images so they find in the content region (on modern browsers).
  [cornae]


1.0b1 - March 9, 2008
---------------------

- Lots of changes
  [lots of people]


0.5 - Feb 25, 2007
------------------

- Added metadata.xml file to the profile.
  [hannosch]

- Tagged the first version to coincide with the 
  Plone 3.0 beta release.
  [limi]

- Generated skeleton product from DIYPloneStyle 2.5.
  [generator]